# PersonalWebsite

./: .eslintrc.json  .firebaserc  .gitignore  .harper-dictionary.txt  Cargo.toml  README.md  build.rs  cspell.json  firebase.json  justfile  package-lock.json  package.json  rollup.config.js
.cargo/: config.toml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  main.yml
contents/: config.toml  dictionary.txt  spell_ignore.txt
contents/assets/: security.txt
contents/posts/: advent-of-code-2025.md  boss-swap.md  car.md  cards.md  climate-crisis.md  clippy-lints.md  crossword.md  genie-of-light.md  l-systems.md  news-quiz.md  parcel-purgatory.md  personal-website-rs.md  personal-website.md  pseudo-haptic-drift.md  python-chess.md  rain.md  recgit.md  rust-chess.md  space-inserters.md  time-terrorists.md  todl.md  trolley-folly.md  video-labeller.md  warp-driver.md  webhook-forwarder.md
contents/templates/: 404.html  base.html  contact.html  index.html  navbar.js  post.html  posts.html  style.css  theme.js
jobber/: Cargo.toml
jobber/jobber_derive/: Cargo.toml
jobber/jobber_derive/src/: lib.rs
jobber/src/: cache.rs  ctx.rs  jobs.rs  leaf.rs  leaf_set.rs  lib.rs  progress.rs  stats.rs  tests.rs
panic_lock/: Cargo.toml
panic_lock/src/: lib.rs
public/: index.html  manifest.json
public/planetSim/: body.js
scripts/: rollup_image_compiler.js  rollup_markdown.js
src/: Root.js  client.js  config.rs  grammar_check.rs  highlight.rs  hr.js  img_conversion.rs  main.rs  minify.rs  npm.rs  post.rs  progress.rs  root.scss  server.rs  serviceWorker.js  site.rs  template.html
src/components/: Nav.svelte  ProjectSmall.svelte  TransitionWrapper.svelte
src/components/button/: button.js  button.scss
src/components/hexQuiz/: hexQuiz.js  hexQuiz.scss
src/components/iframe/: iframe.js
src/components/lichess/: lichess.js
src/components/materialIcon/: materialIcon.js  materialIcon.scss
src/components/preloadImages/: PreloadImages.js
src/components/projectPage/: projectPage.js  projectPage.scss
src/components/projectSmall/: projectSmall.js  projectSmall.scss
src/components/search/: search.js  search.scss
src/components/section/: section.js  section.scss
src/containers/contact/: contact.js
src/containers/header/: header.js  header.scss
src/containers/hexQuiz/: hexQuiz.js  hexQuiz.scss
src/containers/homepage/: homepage.js  homepage.scss
src/containers/projects/: project.scss  projects.js
src/content/: featured.js  pages.js  projects.js
src/projects/: boss-swap.md  car.md  cards.md  climate-crisis.md  crossword.md  genie-of-light.md  l-systems.md  news-quiz.md  personal-website.md  pseudo-haptic-drift.md  python-chess.md  rust-chess.md  time-terrorists.md  trolley-folly.md  video-labeller.md  warp-driver.md
src/routes/: _error.svelte  _layout.svelte  contact.svelte  index.svelte  privacy.svelte
src/routes/projects/: [slug].svelte  _layout.svelte  _projects.js  index.json.js  index.svelte
src/styles/foundation/: a.scss  h1-6.scss  iframe.scss  input.scss  master.scss
src/styles/theme/: mobile.scss  theme.scss  variables.scss
static/: global.css  manifest.json
static/planetSim/: constants.js  force.js  index.html  roboto-condensed.css  scenarios.js  simulation.js  simulator.js  style.css  vector.js
tests/: projects.test.js
