[workspace]
members = [
  ".",
  "jobber",
  "jobber/jobber_derive",
  "panic_lock",
]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# Cargo
# cargo_common_metadata = "warn"
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
unnecessary_debug_formatting = "allow"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
log = "0.4.22"

[package]
name = "personal_website"
version.workspace = true
edition.workspace = true

[features]
default = ["server"]
server = [
  "dep:tokio",
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
  "dep:notify-debouncer-full",
  "dep:futures-util",
  "dep:tokio-stream",
]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.11.5"
log.workspace = true
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.4"

harper-core = "0.36.0"
humantime = "2.1.0"
image = "0.25.1"
lightningcss = { version = "1.0.0-alpha.65", features = ["into_owned"] }
markdown = "1.0.0-alpha.21"
oxc = { version = "0.75.0", features = ["codegen", "minifier", "oxc_minifier"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
tera = "1.19.1"

axum = { version = "0.8.1", optional = true }
futures-util = { version = "0.3", optional = true }
notify-debouncer-full = { version = "0.5.0", default-features = false, optional = true }
tokio-stream = { version = "0.1.14", features = ["sync"], optional = true }
tokio = { version = "1.44.2", features = ["rt", "net"], optional = true }
tower-http = { version = "0.6.0", features = ["fs"], optional = true }
tower = { version = "0.5.0", optional = true }

jobber = { path = "./jobber" }
minify-html = "0.16.4"

[profile.dev.package.image]
opt-level = 3
