[package]
name = "jobber"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["glob"]
glob = ["dep:glob"]

[dependencies]
anyhow.workspace = true
glob = { version = "0.3.1", optional = true }
jobber_derive = { path = "./jobber_derive" }
log.workspace = true
lru = "0.16.3"
panic_lock = { path = "../panic_lock" }
